--- a/gcb_abstract_poster/amyloid_poster.tex
+++ b/gcb_abstract_poster/amyloid_poster.tex
@@ -167,6 +167,8 @@ The sequences used in the study (1044 non-amyloids and 421 amyloids) were extrac
 \end{block}
 \vfill
 
+
+
 \begin{block}{Clustering of amino acids}
 
 \begin{enumerate}[1.]
@@ -181,11 +183,15 @@ The sequences used in the study (1044 non-amyloids and 421 amyloids) were extrac
 
 \begin{block}{Evaluation}
 
+\begin{figure}
+\includegraphics[width=\maxwidth]{ngram_scheme}
+\end{figure}
+
 \begin{enumerate}[1.]
 \item Sequences shorter than 6 amino acids were discarded.
-\item From each sequence overlapping 5-grams were extracted. All n-grams were labelled as their sequence of the origin (e.g. all 5-grams extracted from amyloid sequence were labelled as positive).
-\item For each encoding features were filtered by the QuiPT and used to train the Random Forests~\citep{liaw_classification_2002}. This procedure was performed independently on three training sets: a) 6 amino acids, b) 10 amino acids or shorter, c) 15 amino acids or shorter creating three classifiers.
-\item All classifiers were evaluated in the 5-fold cross-validation eight times. The sequence was labelled as positive (amylogenic), if at least one 5-gram was assessed as amylogenic.
+\item From each sequence overlapping windows of length 6 were extracted. All windows were labelled as their sequence of the origin, e.g. all windows extracted from amyloid sequence were labelled as positive (see Figure A and B).
+\item For each window, 1-, 2- and 3-grams (both discontinous and continous) were extracted (see Figure B). For each encoding, the encoded n-grams were filtered by the QuiPT and used to train the Random Forests~\citep{liaw_classification_2002}. This procedure was performed independently on three training sets: a) 6 amino acids, b) 10 amino acids or shorter, c) 15 amino acids or shorter creating three classifiers.
+\item All classifiers were evaluated in the 5-fold cross-validation eight times. The sequence was labelled as positive (amylogenic), if at least one window was assessed as amylogenic.
 \end{enumerate}
 
 \end{block}
@@ -197,8 +203,8 @@ The encoding distance between \textbf{A} and \textbf{B} is defined as the minimu
 
 \begin{columns}
 \column{.4\textwidth}
-% latex table generated in R 3.2.1 by xtable 1.7-4 package
-% Tue Sep 08 17:56:32 2015
+% latex table generated in R 3.2.2 by xtable 1.7-4 package
+% Wed Sep 23 13:46:41 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{c|l}
@@ -214,8 +220,8 @@ Group & Elements \\
 
 \column{.4\textwidth}
 
-% latex table generated in R 3.2.1 by xtable 1.7-4 package
-% Tue Sep 08 17:56:32 2015
+% latex table generated in R 3.2.2 by xtable 1.7-4 package
+% Wed Sep 23 13:46:41 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{c|l}
@@ -257,8 +263,8 @@ The encoding distance between \textbf{A} and \textbf{B} is 1 (element \textit{c}
 
 
 \begin{block}{Specificity versus sensitivity}
-% latex table generated in R 3.2.1 by xtable 1.7-4 package
-% Tue Sep 08 17:56:32 2015
+% latex table generated in R 3.2.2 by xtable 1.7-4 package
+% Wed Sep 23 13:46:41 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{c|c|c|c|c|c}
