--- a/gcb_abstract_poster/amyloids.bib
+++ b/gcb_abstract_poster/amyloids.bib
@@ -89,7 +89,7 @@ CONTACT: malgorzata.kotulska@pwr.edu.pl.},
 	file = {ScienceDirect Full Text PDF:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/TDSVH6TX/Fändrich - 2012 - Oligomeric Intermediates in Amyloid Formation Str.pdf:application/pdf;ScienceDirect Snapshot:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/Q2NJX65V/S0022283612000277.html:text/html}
 }
 
-@book{burdukiewicz_biogram:_2015,
+@book{burdukiewicz,
 	title = {biogram: analysis of biological sequences using n-grams},
 	url = {http://CRAN.R-project.org/package=biogram},
 	author = {Burdukiewicz, Michal and Sobczyk, Piotr and Lauber, Chris},
