--- a/gcb_abstract_poster/amyloid_poster.tex
+++ b/gcb_abstract_poster/amyloid_poster.tex
@@ -210,7 +210,7 @@ The sequences used in the study (1044 non-amyloids and 421 amyloids) were extrac
 
 %new column ------------------------------------------------------    
 
-\begin{column}{.525\textwidth}
+\begin{column}{.51\textwidth}
 \begin{beamercolorbox}[center,wd=\textwidth]{postercolumn}
 \begin{minipage}[T]{.95\textwidth}  
 \parbox[t][\columnheight]{\textwidth}
@@ -253,7 +253,7 @@ The sequences used in the study (1044 non-amyloids and 421 amyloids) were extrac
 
 \begin{block}{Cross-validation results}
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Fri Sep 25 19:21:35 2015
+% Sat Sep 26 09:17:17 2015
 \begin{table}[ht]
 \centering
 \caption{Encodings with the best sensitivity and specificity for each training set type.} 
@@ -285,9 +285,9 @@ Training length & Number of groups & Encoding ID & Sensitivity & Specificity \\
 ID & Amino acids \\ 
 \midrule
 I & H, M \\ 
-\rowcolor[gray]{0.85}II & F, W, Y \\ 
+\rowcolor[gray]{0.75}II & F, W, Y \\ 
 III &  C, I, L, V \\ 
-\rowcolor[gray]{0.85}IV &  A, D, E, G, K, N, P, Q, R, S, T \\ 
+\rowcolor[gray]{0.75}IV &  A, D, E, G, K, N, P, Q, R, S, T \\ 
 \bottomrule
 \end{tabular}
 \label{tab:best}
@@ -303,11 +303,11 @@ III &  C, I, L, V \\
 ID & Amino acids \\ 
 \midrule
 I & A, T \\ 
-\rowcolor[gray]{0.85}II & D, E, N \\ 
+\rowcolor[gray]{0.75}II & D, E, N \\ 
 III & G, P, S \\ 
-\rowcolor[gray]{0.85}IV &  F, W, Y \\ 
+\rowcolor[gray]{0.75}IV &  F, W, Y \\ 
 V & H, K, Q, R \\ 
-\rowcolor[gray]{0.85}VI &  C, I, L, M, V \\ 
+\rowcolor[gray]{0.75}VI &  C, I, L, M, V \\ 
 \bottomrule
 \end{tabular}
 \label{tab:best}
@@ -358,7 +358,7 @@ AmyloGram, the committee of the best specificity and best sensitivity classifier
 We used established \textit{pep424} benchmark data set~\citep{walsh_pasta_2014} to compare AmyloGram with top-performing  predictors of amyloidogenicity (default settings used).
 
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Fri Sep 25 19:21:35 2015
+% Sat Sep 26 09:17:17 2015
 \begin{table}[ht]
 \centering
 \caption{Results of benchmark.} 
@@ -379,7 +379,7 @@ Since AmyloGram model assumes 6 amino acids as the minimum length of amyloid seq
 \vfill
 
 \begin{block}{Summary and availability}
-AmyloGram is a model-independent predictor of amylogenicity. Instead, it provides insight on the structural features present in the hot-spots. Moreover, AmyloGram is also able to recognise amylogenic seuquences better than existing predictors.
+AmyloGram is a model-independent predictor of amylogenicity. Instead, it provides insight on the structural features present in the hot-spots. Moreover, AmyloGram recognises amylogenic sequences better than existing predictors.
 
 \medskip
 
